# MAPseq

./: AUTHORS  COPYING  Makefile.am  README  README.md  Singularity  bootstrap  configure.ac  ekmerhashmap.h  ekmerhashmap_dec.h  emseq_defs.h  eseq.cpp  eseq.h  eseqali.cpp  eseqali.h  eseqdb.cpp  eseqdb.h  kmerseqtables.cpp  make-bin-package-osx.sh  make-bin-package.sh  mapseq.cpp  setup.sh
data/: BLOSUM62.mat  make-transtable.sh  prot_trans_table.h  transl_table
m4/: edlib.m4  eutils.m4
man/: mapseq.1
manual/: mapseq-manual.tex
tests/: 700016012.V35.fasta.10000.ncbitax.mseq.ref  simple.sh
